k8s/mongo-resources/deploy-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mean-stack
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo-cont
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
          resources:
            requests:
               memory: "100Mi"
               cpu: "50m"
            limits:
               memory: "200Mi"
               cpu: "100m"
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
