k8s/mongo-resources/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: mean-stack
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
