k8s/mongo-resources/network_policy-monogo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-policy
  namespace: mean-stack
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
  ingress:
# Allow traffic only from backend
  - from: 
    - podSelector:
        matchLabels:
          app: backend
    ports:
      - protocol: TCP
        port: 27017
